--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^6.8.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
